--- a/css/form.css
+++ b/css/form.css
@@ -1,3 +1,6 @@
+input:disabled {
+    background: black;
+}
 
 input, textarea, select {
     padding: 9px;
@@ -17,7 +20,7 @@ input:hover, textarea:hover,
 input:focus, textarea:focus { 
     border-color: rgba(35, 173, 255, 1);
 }
-   
+
 .form label {
     display: inline-block;
     text-align: right;
