--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,9 +76,9 @@ header.top{
 /******** HEADER/ITEMS ********/
 
 header.hero {
-    background-image: url('../img/banner4.png');
+    background-image: url('../img/banner0.jpg');
     background-size: cover;
-    background-position: left bottom;
+    background-position: right center;
     margin: 0;
     padding-top: 111px;
     padding-bottom: 86px;
