--- a/css/animate.css
+++ b/css/animate.css
@@ -46,5 +46,17 @@
 }
 
 @keyframes blinker {  
-  50% { opacity: 0; }
+  50% { 
+      opacity: 0;
+      transform: scale(0.85);
+    }
+}
+
+@keyframes head {
+    0% {
+        opacity:1;
+    }
+    100% {
+        opacity:0.6;
+    }
 }
